# obsdemo_packages

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  demo1.c  demo2.c  demo3.c
src/lib/: CMakeLists.txt  liba.c  libb.c  libc.c
src/lib/include/: CMakeLists.txt  testlibA.h  testlibB.h  testlibC.h  testlibcommon.h
